fix: align about section properly

--- a/src/components/Composite/About/About.css
+++ b/src/components/Composite/About/About.css
@@ -10,4 +10,6 @@
 .about__cards {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    gap: 40px;
 }
